Add html and css for about page and index page alos add media queries for desktop versions

--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
                     <a href="#">Logout</a>     
                 </nav>
                 <nav id="nav-bar-two">
-                    <a class="game-con" href="">Gaming convention 2022</a>
-                    <a href="">About</a>
+                    <a class="game-con" href="index.html">Gaming convention 2022</a>
+                    <a href="about.html">About</a>
                     <a href="#program">Program</a>
                     <a href="">Join</a>
                     <a href="">Sponsor</a>
@@ -39,7 +39,9 @@
             </div>
             <section id="header-content">
                 <h1>Welcome All!</h1>
-                <h2>Barbados Gaming Convention 2022</h2>
+                <div class="bar-game">
+                    <h2>Barbados Gaming Convention 2022</h2>
+                </div>
                 <div class="paragraph">
                     <p class="paragraph-one">Come and enjoy some of the world's best gaming consoles and computer gaming desktops built by our very own, enjoy the light show and play the latest games. Compititions will also be held with amazing prizes.</p>
                 </div>
@@ -78,19 +80,9 @@
         <article id="feature">
             <h3>Featured Speakers</h3>
             <span class="underline"></span>
-            <!--<div id="speakers">
-                <img src="./images/speaker_02.png" alt="featured speaker one">
-                <div class="descriptions">
-                    <h4>Jeon Gil-nam</h4>
-                    <div class="tech">Emeritus Professor, Korea Advanced Institute of Science and Technology</div>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. At, officiis amet ab possimus impedit unde quo perspiciatis in mollitia accusamus?
-                    </p>
-                </div>
-            </div>-->
         </article>
     </div>
     <!--javascript-->
     <script src="javascript.js"></script>
-    
 </body>
 </html>
