--- a/about.html
+++ b/about.html
@@ -1,86 +1,162 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="user-scalable=5;"/>
-    <link rel="stylesheet" href="styles.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="styles.css" />
+    <script
+      src="https://kit.fontawesome.com/43fc886676.js"
+      crossorigin="anonymous"
+    ></script>
     <title>Gaming Convention</title>
-</head>
-<body>
+  </head>
+  <body>
     <div id="container">
-        <header id="about-head-section">
-            <nav class="hamburger-icon">
-                <button class="hamburger-button">
-                    <span class="h-button"></span>
-                    <span class="h-button"></span>
-                    <span class="h-button"></span>
-                </button>
-            </nav>
-            <div class="nav-bars">
-                <nav id="nav-bar-one">
-                    <a href="#"><img src="./images/Vector3.png" alt="facebook icon"></a>
-                 <a href="#"><img src="./images/Vector2.png"   alt="twitter icon"></a>
-                    <a href="#">English</a>
-                    <a href="#">My Page</a>
-                    <a href="#">Logout</a>     
-                </nav>
-                <nav id="nav-bar-two">
-                    <a class="game-con" href="index.html">Gaming convention 2022</a>
-                    <a href="">About</a>
-                    <a href="#program">Program</a>
-                    <a href="">Join</a>
-                    <a href="">Sponsor</a>
-                    <a href="">News</a>
-                    <div class="campaign">
-                    <a href="#">CC Campaign</a>
-                    </div>
-                </nav>
+      <header class="head-section">
+        <div class="hamburger-icon">
+          <button class="hamburger-button">
+            <span class="h-button"></span>
+            <span class="h-button"></span>
+            <span class="h-button"></span>
+          </button>
+        </div>
+        <div class="nav-bars">
+          <nav class="nav-bar-one">
+            <ul>
+              <li>
+                <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
+              </li>
+              <li>
+                <a href="#"><i class="fa-brands fa-twitter"></i></a>
+              </li>
+              <li><a href="#">English</a></li>
+              <li><a href="#">My Page</a></li>
+              <li><a href="#">Logout</a></li>
+            </ul>
+          </nav>
+          <nav class="nav-bar-two">
+            <div class="">
+              <ul>
+                <li><a href="index.html">Gaming convention 2022</a></li>
+              </ul>
             </div>
-            <section id="about-header-content">
-                <h1>Welcome All!</h1>
-                <h2>Barbados Gaming Convention 2022</h2>
-                <div class="about-paragraph">
-                    <p class="about-paragraph-one">Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores optio odit delectus recusandae magni. Ab corrupti est dolores nisi at obcaecati officiis atque rerum veritatis.</p>
-                </div>
-                <p class="about-sentence-one">Please contact us per email with any further questions about Barbados Gaming convention 2022.<br>
-                    barbadosgamingcon22@gamil.com
-                </p>
-            </section>
-        </header>
+            <div class="navs-two">
+              <ul>
+                <li><a href="about.html">About</a></li>
+                <li><a href="#program">Program</a></li>
+                <li><a href="">Join</a></li>
+                <li><a href="">Sponsor</a></li>
+                <li><a href="">News</a></li>
+              </ul>
+            </div>
+            <div class="campaign">
+              <ul>
+                <li><a href="#">CC Campaign</a></li>
+              </ul>
+            </div>
+          </nav>
+        </div>
+      </header>
+      <main>
+        <section id="about-header-content">
+          <h1>Welcome All!</h1>
+          <h2>Barbados Gaming Convention 2022</h2>
+          <div class="about-paragraph">
+            <p class="about-paragraph-one">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit.
+              Asperiores optio odit delectus recusandae magni. Ab corrupti est
+              dolores nisi at obcaecati officiis atque rerum veritatis.
+            </p>
+          </div>
+          <p class="about-sentence-one">
+            Please contact us per email with any further questions about
+            Barbados Gaming convention 2022.<br />
+            barbadosgamingcon22@gamil.com
+          </p>
+        </section>
         <section class="about-logo">
-            <h3>Barbados Gaming Convention 2022 Logo</h3>
-            <span class="underline"></span>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus, corporis!</p>
-            <div class="logo-border">
-                <img class="logo" src="./images/PlayStation.png" alt="playstation logo">
-                <img class="logo" src="./images/switch-logo.png" alt="convention logo nintendo switch">
-                <img class="logo" src="./images/Xbox_Series.png" alt="Xbox series x logo">
-            </div>
+          <h3>Barbados Gaming Convention 2022 Logo</h3>
+          <span class="underline"></span>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit.
+            Repellendus, corporis!
+          </p>
+          <div class="logo-border">
+            <img
+              class="logo"
+              src="./images/PlayStation.png"
+              alt="playstation logo"
+            />
+            <img
+              class="logo"
+              src="./images/switch-logo.png"
+              alt="convention logo nintendo switch"
+            />
+            <img
+              class="logo"
+              src="./images/Xbox_Series.png"
+              alt="Xbox series x logo"
+            />
+          </div>
         </section>
         <article id="convention">
-            <h3>See the past conventions</h3>
-            <span class="underline"></span>
-            <p>Take a look at the last two conventions which took place</p>
-            <img class="convention-img" src="./images/tokyo-convention.jpg" alt="convention image one">
-            <img class="convention-img" src="./images/img-convention.jpg" alt="convention image two">
+          <h3>See the past conventions</h3>
+          <span class="underline"></span>
+          <p>Take a look at the last two conventions which took place</p>
+          <div class="con-images">
+            <img
+              class="convention-img"
+              src="./images/tokyo-convention.jpg"
+              alt="convention image one"
+            />
+            <img
+              class="convention-img"
+              src="./images/img-convention.jpg"
+              alt="convention image two"
+            />
+          </div>
         </article>
-        <section class="partners">
-            <h3>Partners</h3>
-            <span class="underline"></span>
-            <div class="partner-logo">
-                <img class="sponsor-logo" src="./images/gameslogo.jpg" alt="Sponsor logo one">
-                <img class="sponsor-logo" src="./images/geek-video-game.jpg" alt="Sponsor logo two">
-                <img class="sponsor-logo" src="./images/Gaming.jpg" alt="Sponsor logo three">
-                <img class="sponsor-logo" src="./images/optimized.jpg" alt="Sponsor log three">
-                <img class="sponsor-logo" src="./images/world-g.png" alt="Sponsor logo four">
-            </div>
+        <section class="about-partners">
+          <h3>Partners</h3>
+          <span class="underline"></span>
+          <div class="partner-logo">
+            <img
+              class="sponsor-logo"
+              src="./images/gameslogo.jpg"
+              alt="Sponsor logo one"
+            />
+            <img
+              class="sponsor-logo"
+              src="./images/geek-video-game.jpg"
+              alt="Sponsor logo two"
+            />
+            <img
+              class="sponsor-logo"
+              src="./images/Gaming.jpg"
+              alt="Sponsor logo three"
+            />
+            <img
+              class="sponsor-logo"
+              src="./images/optimized.jpg"
+              alt="Sponsor log three"
+            />
+            <img
+              class="sponsor-logo"
+              src="./images/world-g.png"
+              alt="Sponsor logo four"
+            />
+          </div>
         </section>
-        <footer class="footer">
-            <p class="footer-one">barbados gaming</p>
-            <p class="footer-two">2022 barbados gaming convention<br> Some Rights Reserved</p>
-        </footer>
+      </main>
+      <footer class="about-footer">
+        <p class="footer-one">barbados gaming</p>
+        <p class="footer-two">
+          2022 barbados gaming convention<br />
+          Some Rights Reserved
+        </p>
+      </footer>
     </div>
     <script src="javascript.js"></script>
-</body>
+  </body>
 </html>
