--- a/index.html
+++ b/index.html
@@ -1,88 +1,161 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="user-scalable=5;"/>
-    <link rel="stylesheet" href="styles.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="styles.css" />
+    <script
+      src="https://kit.fontawesome.com/43fc886676.js"
+      crossorigin="anonymous"
+    ></script>
     <title>Gaming Convention</title>
-</head>
-<body>
+  </head>
+  <body>
     <div id="container">
-        <header id="head-section">
-            <nav class="hamburger-icon">
-                <button class="hamburger-button">
-                    <span class="h-button"></span>
-                    <span class="h-button"></span>
-                    <span class="h-button"></span>
-                </button>
-            </nav>
-            <div class="nav-bars">
-                <nav id="nav-bar-one">
-                    <a href="#"><img src="./images/Vector3.png" alt="facebook icon"></a>
-                 <a href="#"><img src="./images/Vector2.png"   alt="twitter icon"></a>
-                    <a href="#">English</a>
-                    <a href="#">My Page</a>
-                    <a href="#">Logout</a>     
-                </nav>
-                <nav id="nav-bar-two">
-                    <a class="game-con" href="index.html">Gaming convention 2022</a>
-                    <a href="about.html">About</a>
-                    <a href="#program">Program</a>
-                    <a href="">Join</a>
-                    <a href="">Sponsor</a>
-                    <a href="">News</a>
-                    <div class="campaign">
-                    <a href="#">CC Campaign</a>
-                    </div>
-                </nav>
+      <header class="head-section">
+        <div class="hamburger-icon">
+          <button class="hamburger-button">
+            <span class="h-button"></span>
+            <span class="h-button"></span>
+            <span class="h-button"></span>
+          </button>
+        </div>
+        <div class="nav-bars">
+          <nav class="nav-bar-one">
+            <ul>
+              <li>
+                <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
+              </li>
+              <li>
+                <a href="#"><i class="fa-brands fa-twitter"></i></a>
+              </li>
+              <li><a href="#">English</a></li>
+              <li><a href="#">My Page</a></li>
+              <li><a href="#">Logout</a></li>
+            </ul>
+          </nav>
+          <nav class="nav-bar-two">
+            <div class="">
+              <ul>
+                <li><a href="index.html">Gaming convention 2022</a></li>
+              </ul>
             </div>
-            <section id="header-content">
-                <h1>Welcome All!</h1>
-                <div class="bar-game">
-                    <h2>Barbados Gaming Convention 2022</h2>
-                </div>
-                <div class="paragraph">
-                    <p class="paragraph-one">Come and enjoy some of the world's best gaming consoles and computer gaming desktops built by our very own, enjoy the light show and play the latest games. Compititions will also be held with amazing prizes.</p>
-                </div>
-                <div class="date">
-                    For Two days, May-14th-2022 until (Sun)May-15th-2022
-                </div>
-                <p class="sentence-one">@ Full Scale Gaming Auditorium</p>
-            </section>
-        </header>
+            <div class="navs-two">
+              <ul>
+                <li><a href="about.html">About</a></li>
+                <li><a href="#program">Program</a></li>
+                <li><a href="">Join</a></li>
+                <li><a href="">Sponsor</a></li>
+                <li><a href="">News</a></li>
+              </ul>
+            </div>
+            <div class="campaign">
+              <ul>
+                <li><a href="#">CC Campaign</a></li>
+              </ul>
+            </div>
+          </nav>
+        </div>
+      </header>
+      <main>
+        <section id="header-content">
+          <h1>Welcome All!</h1>
+          <div class="bar-game">
+            <h2>Barbados Gaming Convention 2022</h2>
+          </div>
+          <div class="paragraph">
+            <p class="paragraph-one">
+              Come and enjoy some of the world's best gaming consoles and
+              computer gaming desktops built by our very own, enjoy the light
+              show and play the latest games. Compititions will also be held
+              with amazing prizes.
+            </p>
+          </div>
+          <div class="date">
+            For Two days, May-14th-2022 until (Sun)May-15th-2022
+          </div>
+          <p class="sentence-one">@ Full Scale Gaming Auditorium</p>
+        </section>
         <section id="program">
-            <h3>Main Program</h3>
-            <div class="program-block">
-                <div class="gaming">
-                    <h3>Retro Games</h3>
-                    <p>play old school games, relive your childhood</p>
-                </div>
-                <div class="gaming">
-                    <h3>Gaming</h3>
-                    <p>play old school games, relive your childhood</p>
-                </div>
-                <div class="gaming">
-                    <h3>Cosplay</h3>
-                    <p>play old school games, relive your childhood</p>
-                </div>
-                <div class="gaming">
-                    <h3>Gaming</h3>
-                    <p>play old school games, relive your childhood</p>
-                </div>
-                <div class="gaming">
-                    <h3>Gaming</h3>
-                    <p>play old school games, relive your childhood</p>
-                </div>
+          <h3>Main Program</h3>
+          <div class="program-block">
+            <div class="gaming one">
+              <i class="fa-solid fa-chess-board"></i>
+              <h3>Retro Games</h3>
+              <p>play old school games, relive your childhood</p>
             </div>
+            <div class="gaming">
+              <i class="fa-solid fa-chess-board"></i>
+              <h3>Gaming</h3>
+              <p>play old school games, relive your childhood</p>
+            </div>
+            <div class="gaming">
+              <i class="fa-solid fa-chess-board"></i>
+              <h3>Cosplay</h3>
+              <p>play old school games, relive your childhood</p>
+            </div>
+            <div class="gaming">
+              <i class="fa-solid fa-chess-board"></i>
+              <h3>Gaming</h3>
+              <p>play old school games, relive your childhood</p>
+            </div>
+            <div class="gaming">
+              <i class="fa-solid fa-chess-board"></i>
+              <h3>Gaming</h3>
+              <p>play old school games, relive your childhood</p>
+            </div>
+          </div>
+          <div class="see-program">
             <a href="#">SEE THE WHOLE PROGRAM</a>
+          </div>
         </section>
         <article id="feature">
-            <h3>Featured Speakers</h3>
-            <span class="underline"></span>
+          <h3>Featured Speakers</h3>
+          <span class="underline"></span>
+          <div id="feature-block"></div>
         </article>
+        <section class="partners">
+          <h3>Partners</h3>
+          <span class="underline"></span>
+          <div class="partner-logo">
+            <img
+              class="sponsor-logo"
+              src="./images/gameslogo.jpg"
+              alt="Sponsor logo one"
+            />
+            <img
+              class="sponsor-logo"
+              src="./images/geek-video-game.jpg"
+              alt="Sponsor logo two"
+            />
+            <img
+              class="sponsor-logo"
+              src="./images/Gaming.jpg"
+              alt="Sponsor logo three"
+            />
+            <img
+              class="sponsor-logo"
+              src="./images/optimized.jpg"
+              alt="Sponsor log three"
+            />
+            <img
+              class="sponsor-logo"
+              src="./images/world-g.png"
+              alt="Sponsor logo four"
+            />
+          </div>
+        </section>
+      </main>
+      <footer class="footer">
+        <p class="footer-one">barbados gaming</p>
+        <p class="footer-two">
+          2022 barbados gaming convention<br />
+          Some Rights Reserved
+        </p>
+      </footer>
     </div>
     <!--javascript-->
     <script src="javascript.js"></script>
-</body>
+  </body>
 </html>
