Add java.js for about.html so hamburger button can work

--- a/about.html
+++ b/about.html
@@ -157,6 +157,6 @@
         </p>
       </footer>
     </div>
-    <script src="javascript.js"></script>
+    <script src="java.js"></script>
   </body>
 </html>
