Fix linter errors and add website link to readme

--- a/about.html
+++ b/about.html
@@ -15,7 +15,7 @@
     <div id="container">
       <header class="head-section">
         <div class="hamburger-icon">
-          <button class="hamburger-button">
+          <button class="hamburger-button" type="button">
             <span class="h-button"></span>
             <span class="h-button"></span>
             <span class="h-button"></span>
