Made required changes to css of about and index.html

--- a/about.html
+++ b/about.html
@@ -21,6 +21,14 @@
             <span class="h-button"></span>
           </button>
         </div>
+        <nav class="menu-nav">
+          <ul>
+            <li><a href="index.html">HOME</a></li>
+            <li><a href="#">PROGRAM</a></li>
+            <li><a href="#">SPEAKERS</a></li>
+            <li><a href="#">PARTNERS</a></li>
+          </ul>
+        </nav>
         <div class="nav-bars">
           <nav class="nav-bar-one">
             <ul>
@@ -43,8 +51,8 @@
             </div>
             <div class="navs-two">
               <ul>
-                <li><a href="about.html">About</a></li>
-                <li><a href="#program">Program</a></li>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="index.html#program">Program</a></li>
                 <li><a href="">Join</a></li>
                 <li><a href="">Sponsor</a></li>
                 <li><a href="">News</a></li>
@@ -62,6 +70,7 @@
         <section id="about-header-content">
           <h1>Welcome All!</h1>
           <h2>Barbados Gaming Convention 2022</h2>
+          <span class="underline"></span>
           <div class="about-paragraph">
             <p class="about-paragraph-one">
               Lorem ipsum dolor sit amet consectetur adipisicing elit.
@@ -79,8 +88,7 @@
           <h3>Barbados Gaming Convention 2022 Logo</h3>
           <span class="underline"></span>
           <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit.
-            Repellendus, corporis!
+            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Debitis quod, dolorum libero explicabo officiis illo, nobis incidunt odit cum beatae voluptate sit praesentium minus. Vel amet unde modi exercitationem natus deleniti. Saepe commodi, doloremque, voluptatibus labore porro ipsam possimus hic minima soluta facilis quo atque dolores aut optio officiis, corporis consectetur veritatis natus ea ratione voluptatum repellat iure. Reiciendis vero est maiores alias nihil quibusdam corporis eaque repudiandae, libero totam excepturi ullam blanditiis quas esse molestias magnam iste aut fugit.
           </p>
           <div class="logo-border">
             <img
@@ -105,16 +113,22 @@
           <span class="underline"></span>
           <p>Take a look at the last two conventions which took place</p>
           <div class="con-images">
+            <div class="con1">
+              <p>2016 Gaming convention<br> Grenada</p>
             <img
               class="convention-img"
-              src="./images/tokyo-convention.jpg"
+              src="./images/convention.jpg"
               alt="convention image one"
             />
+            </div>
+            <div class="con2">
+              <p>2019 Gaming convention<br> Trinidad</p>
             <img
               class="convention-img"
               src="./images/img-convention.jpg"
               alt="convention image two"
             />
+            </div>
           </div>
         </article>
         <section class="about-partners">
