--- a/index.html
+++ b/index.html
@@ -12,149 +12,158 @@
     <title>Gaming Convention</title>
   </head>
   <body>
-    <div id="container">
-      <header class="head-section">
-        <div class="hamburger-icon">
-          <button class="hamburger-button" type="button">
-            <span class="h-button"></span>
-            <span class="h-button"></span>
-            <span class="h-button"></span>
-          </button>
-        </div>
-        <div class="nav-bars">
-          <nav class="nav-bar-one">
+    <header class="head-section">
+      <div class="hamburger-icon">
+        <button class="hamburger-button" type="button">
+          <span class="h-button"></span>
+          <span class="h-button"></span>
+          <span class="h-button"></span>
+        </button>
+      </div>
+      <nav class="menu-nav">
+        <ul>
+          <li><a href="about.html">ABOUT</a></li>
+          <li><a href="#">PROGRAM</a></li>
+          <li><a href="#">SPEAKERS</a></li>
+          <li><a href="#">PARTNERS</a></li>
+        </ul>
+      </nav>
+      <div class="nav-bars">
+        <nav class="nav-bar-one">
+          <ul>
+            <li>
+              <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
+            </li>
+            <li>
+              <a href="#"><i class="fa-brands fa-twitter"></i></a>
+            </li>
+            <li><a href="#">English</a></li>
+            <li><a href="#">My Page</a></li>
+            <li><a href="#">Logout</a></li>
+          </ul>
+        </nav>
+        <nav class="nav-bar-two">
+          <div class="">
             <ul>
-              <li>
-                <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
-              </li>
-              <li>
-                <a href="#"><i class="fa-brands fa-twitter"></i></a>
-              </li>
-              <li><a href="#">English</a></li>
-              <li><a href="#">My Page</a></li>
-              <li><a href="#">Logout</a></li>
+              <li><a href="index.html">Gaming convention 2022</a></li>
             </ul>
-          </nav>
-          <nav class="nav-bar-two">
-            <div class="">
-              <ul>
-                <li><a href="index.html">Gaming convention 2022</a></li>
-              </ul>
-            </div>
-            <div class="navs-two">
-              <ul>
-                <li><a href="about.html">About</a></li>
-                <li><a href="#program">Program</a></li>
-                <li><a href="">Join</a></li>
-                <li><a href="">Sponsor</a></li>
-                <li><a href="">News</a></li>
-              </ul>
-            </div>
-            <div class="campaign">
-              <ul>
-                <li><a href="#">CC Campaign</a></li>
-              </ul>
-            </div>
-          </nav>
+          </div>
+          <div class="navs-two">
+            <ul>
+              <li><a href="about.html">About</a></li>
+              <li><a href="#program">Program</a></li>
+              <li><a href="">Join</a></li>
+              <li><a href="">Sponsor</a></li>
+              <li><a href="">News</a></li>
+            </ul>
+          </div>
+          <div class="campaign">
+            <ul>
+              <li><a href="#">CC Campaign</a></li>
+            </ul>
+          </div>
+        </nav>
+      </div>
+    </header>
+    <main>
+      <section id="header-content">
+        <h1>Welcome All!</h1>
+        <div class="bar-game">
+          <h2>Barbados Gaming Convention 2022</h2>
         </div>
-      </header>
-      <main>
-        <section id="header-content">
-          <h1>Welcome All!</h1>
-          <div class="bar-game">
-            <h2>Barbados Gaming Convention 2022</h2>
-          </div>
-          <div class="paragraph">
-            <p class="paragraph-one">
-              Come and enjoy some of the world's best gaming consoles and
-              computer gaming desktops built by our very own, enjoy the light
-              show and play the latest games. Compititions will also be held
-              with amazing prizes.
-            </p>
-          </div>
-          <div class="date">
-            For Two days, May-14th-2022 until (Sun)May-15th-2022
-          </div>
-          <p class="sentence-one">@ Full Scale Gaming Auditorium</p>
-        </section>
-        <section id="program">
-          <h3>Main Program</h3>
-          <div class="program-block">
-            <div class="gaming one">
-              <i class="fa-solid fa-chess-board"></i>
-              <h3>Retro Games</h3>
-              <p>play old school games, relive your childhood</p>
-            </div>
-            <div class="gaming">
-              <i class="fa-solid fa-chess-board"></i>
-              <h3>Gaming</h3>
-              <p>play old school games, relive your childhood</p>
-            </div>
-            <div class="gaming">
-              <i class="fa-solid fa-chess-board"></i>
-              <h3>Cosplay</h3>
-              <p>play old school games, relive your childhood</p>
-            </div>
-            <div class="gaming">
-              <i class="fa-solid fa-chess-board"></i>
-              <h3>Gaming</h3>
-              <p>play old school games, relive your childhood</p>
-            </div>
-            <div class="gaming">
-              <i class="fa-solid fa-chess-board"></i>
-              <h3>Gaming</h3>
-              <p>play old school games, relive your childhood</p>
-            </div>
-          </div>
-          <div class="see-program">
-            <a href="#">SEE THE WHOLE PROGRAM</a>
-          </div>
-        </section>
-        <article id="feature">
-          <h3>Featured Speakers</h3>
-          <span class="underline"></span>
-          <div id="feature-block"></div>
-        </article>
-        <section class="partners">
-          <h3>Partners</h3>
-          <span class="underline"></span>
-          <div class="partner-logo">
-            <img
-              class="sponsor-logo"
-              src="./images/gameslogo.jpg"
-              alt="Sponsor logo one"
-            />
-            <img
-              class="sponsor-logo"
-              src="./images/geek-video-game.jpg"
-              alt="Sponsor logo two"
-            />
-            <img
-              class="sponsor-logo"
-              src="./images/Gaming.jpg"
-              alt="Sponsor logo three"
-            />
-            <img
-              class="sponsor-logo"
-              src="./images/optimized.jpg"
-              alt="Sponsor log three"
-            />
-            <img
-              class="sponsor-logo"
-              src="./images/world-g.png"
-              alt="Sponsor logo four"
-            />
-          </div>
-        </section>
-      </main>
-      <footer class="footer">
-        <p class="footer-one">barbados gaming</p>
-        <p class="footer-two">
-          2022 barbados gaming convention<br />
-          Some Rights Reserved
-        </p>
-      </footer>
-    </div>
+        <div class="paragraph">
+          <p class="paragraph-one">
+            Come and enjoy some of the world's best gaming consoles and computer
+            gaming desktops built by our very own, enjoy the light show and play
+            the latest games. Compititions will also be held with amazing
+            prizes.
+          </p>
+        </div>
+        <div class="date">
+          For Two days, May-14th-2022 until (Sun)May-15th-2022
+        </div>
+        <p class="sentence-one">@ Full Scale Gaming Auditorium</p>
+      </section>
+      <section id="program">
+        <h3 class="pro-heading">Main Program</h3>
+        <span class="underline"></span>
+        <div class="program-block">
+          <ul class="gaming one">
+            <li><img src="./images/icon5.png" alt="convention icon five" /></li>
+            <li><h3>Retro Games</h3></li>
+            <li><p>play old school games, relive your childhood</p></li>
+          </ul>
+          <ul class="gaming">
+            <li><img src="./images/exhib.png" alt="convention icon" /></li>
+            <li><h3>Gaming</h3></li>
+            <li><p>play old school games, relive your childhood</p></li>
+          </ul>
+          <ul class="gaming">
+            <li><img src="./images/icon2.png" alt="convention icon two" /></li>
+            <li><h3>Cosplay</h3></li>
+            <li><p>play old school games, relive your childhood</p></li>
+          </ul>
+          <ul class="gaming">
+            <li>
+              <img src="./images/icon3.png" alt="convention icon three" />
+            </li>
+            <li><h3>Gaming</h3></li>
+            <li><p>play old school games, relive your childhood</p></li>
+          </ul>
+          <ul class="gaming">
+            <li><img src="./images/icon4.png" alt="convention icon four" /></li>
+            <li><h3>Gaming</h3></li>
+            <li><p>play old school games, relive your childhood</p></li>
+          </ul>
+        </div>
+        <div class="see-program">
+          <a href="#">SEE THE WHOLE PROGRAM</a>
+        </div>
+      </section>
+      <article id="feature">
+        <h3>Featured Speakers</h3>
+        <span class="underline"></span>
+        <div id="feature-block"></div>
+      </article>
+      <section class="partners">
+        <h3>Partners</h3>
+        <span class="underline"></span>
+        <div class="partner-logo">
+          <img
+            class="sponsor-logo"
+            src="./images/gameslogo.jpg"
+            alt="Sponsor logo one"
+          />
+          <img
+            class="sponsor-logo"
+            src="./images/geek-video-game.jpg"
+            alt="Sponsor logo two"
+          />
+          <img
+            class="sponsor-logo"
+            src="./images/Gaming.jpg"
+            alt="Sponsor logo three"
+          />
+          <img
+            class="sponsor-logo"
+            src="./images/optimized.jpg"
+            alt="Sponsor log three"
+          />
+          <img
+            class="sponsor-logo"
+            src="./images/world-g.png"
+            alt="Sponsor logo four"
+          />
+        </div>
+      </section>
+    </main>
+    <footer class="footer">
+      <p class="footer-one">barbados gaming</p>
+      <p class="footer-two">
+        2022 barbados gaming convention<br />
+        Some Rights Reserved
+      </p>
+    </footer>
     <!--javascript-->
     <script src="javascript.js"></script>
   </body>
