Fix linter errors

--- a/about.html
+++ b/about.html
@@ -88,7 +88,16 @@
           <h3>Barbados Gaming Convention 2022 Logo</h3>
           <span class="underline"></span>
           <p>
-            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Debitis quod, dolorum libero explicabo officiis illo, nobis incidunt odit cum beatae voluptate sit praesentium minus. Vel amet unde modi exercitationem natus deleniti. Saepe commodi, doloremque, voluptatibus labore porro ipsam possimus hic minima soluta facilis quo atque dolores aut optio officiis, corporis consectetur veritatis natus ea ratione voluptatum repellat iure. Reiciendis vero est maiores alias nihil quibusdam corporis eaque repudiandae, libero totam excepturi ullam blanditiis quas esse molestias magnam iste aut fugit.
+            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Debitis
+            quod, dolorum libero explicabo officiis illo, nobis incidunt odit
+            cum beatae voluptate sit praesentium minus. Vel amet unde modi
+            exercitationem natus deleniti. Saepe commodi, doloremque,
+            voluptatibus labore porro ipsam possimus hic minima soluta facilis
+            quo atque dolores aut optio officiis, corporis consectetur veritatis
+            natus ea ratione voluptatum repellat iure. Reiciendis vero est
+            maiores alias nihil quibusdam corporis eaque repudiandae, libero
+            totam excepturi ullam blanditiis quas esse molestias magnam iste aut
+            fugit.
           </p>
           <div class="logo-border">
             <img
@@ -108,26 +117,32 @@
             />
           </div>
         </section>
-        <article id="convention">
+        <article class="convention">
           <h3>See the past conventions</h3>
           <span class="underline"></span>
           <p>Take a look at the last two conventions which took place</p>
           <div class="con-images">
             <div class="con1">
-              <p>2016 Gaming convention<br> Grenada</p>
-            <img
-              class="convention-img"
-              src="./images/convention.jpg"
-              alt="convention image one"
-            />
+              <p>
+                2016 Gaming convention<br />
+                Grenada
+              </p>
+              <img
+                class="convention-img"
+                src="./images/convention.jpg"
+                alt="convention image one"
+              />
             </div>
             <div class="con2">
-              <p>2019 Gaming convention<br> Trinidad</p>
-            <img
-              class="convention-img"
-              src="./images/img-convention.jpg"
-              alt="convention image two"
-            />
+              <p>
+                2019 Gaming convention<br />
+                Trinidad
+              </p>
+              <img
+                class="convention-img"
+                src="./images/img-convention.jpg"
+                alt="convention image two"
+              />
             </div>
           </div>
         </article>
