--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
         </div>
         <p class="sentence-one">@ Full Scale Gaming Auditorium</p>
       </section>
-      <section id="program">
+      <section class="program">
         <h3 class="pro-heading">Main Program</h3>
         <span class="underline"></span>
         <div class="program-block">
@@ -120,7 +120,7 @@
           <a href="#">SEE THE WHOLE PROGRAM</a>
         </div>
       </section>
-      <article id="feature">
+      <article class="feature">
         <h3>Featured Speakers</h3>
         <span class="underline"></span>
         <div id="feature-block"></div>
